Update post layout with new date format and category/tag styles

--- a/_posts/2025-05-24-math-test.md
+++ b/_posts/2025-05-24-math-test.md
@@ -2,6 +2,8 @@
 layout: post
 title: "数式のテスト"
 date: 2025-05-24 21:00:00 +0900
+categories: general
+tags: test
 ---
 
 これはインライン数式のテストです。例えば、アインシュタインの有名な式は $E=mc^2$ です。
